# codex

./: .gitignore  README.md  align_srt_dubs.py  align_srt_gui.py  launch_gui.py  pyproject.toml
src/dubbing/: __init__.py  aligner.py  gui.py
tests/: conftest.py  test_alignment.py
